--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "node": ">=22",
     "pnpm": ">=10"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@eslint/compat": "^1.2.6",
     "@eslint/js": "^9.20.0",
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.6",
@@ -26,6 +26,10 @@
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-re-export-sort": "^0.1.15",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-typescript-sort-keys": "^3.3.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.5.1",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3",
