--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -10,12 +10,12 @@
     "lint-fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "isbot": "^5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5"
-  },
-  "devDependencies": {}
+  }
 }
