--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "react-router dev",
     "build": "react-router build",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "react-router-serve ./dist/server/index.js",
     "lint-test": "eslint ./src",
     "lint-fix": "eslint ./src --fix"
   },
