--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "@overdesk/webapp/*": ["apps/webapp/src/*"]
+      "@overdesk/transmission/*": ["apps/transmission/src/*"],
+      "@overdesk/webapp/*": ["apps/webapp/src/*"],
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
