--- a/apps/transmission/package.json
+++ b/apps/transmission/package.json
@@ -2,9 +2,9 @@
   "name": "@overdesk/transmission",
   "version": "0.0.1",
   "scripts": {
-    "dev": "concurrently --names esbuild,node \"esbuild ./src/index.ts --bundle --platform=node --outdir=.dev --watch --sourcemap\" \"node --watch .dev/index.js\"",
+    "dev": "concurrently --names esbuild,node \"esbuild ./src/index.ts --bundle --platform=node --outdir=.dev --watch --sourcemap\" \"node --watch .dev/index.js --port 4001\"",
     "build": "esbuild ./src/index.ts --bundle  --platform=node --outdir=dist --minify",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --port 4001",
     "lint-test": "eslint ./src",
     "lint-fix": "eslint ./src --fix"
   },
