--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "react-router dev",
+    "dev": "react-router dev --port 4000",
     "build": "react-router build",
-    "start": "react-router-serve ./dist/server/index.js",
+    "start": "react-router-serve ./dist/server/index.js --port 4000",
     "lint-test": "eslint ./src",
     "lint-fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@overdesk/utils": "workspace:^",
     "@emotion/styled": "^11.14.0",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
