--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "pnpm run --parallel dev",
-    "dev:webapp": "pnpm run --filter=@overdesk/webapp dev",
-    "build:webapp": "pnpm run --filter=@overdesk/webapp build",
-    "start:webapp": "pnpm run --filter=@overdesk/webapp start",
-    "lint-test:webapp": "pnpm run --filter=@overdesk/webapp lint-test",
-    "lint-fix:webapp": "pnpm run --filter=@overdesk/webapp lint-fix",
-    "---": "---"
+    "build": "pnpm run --parallel build",
+    "start": "pnpm run --parallel start",
+    "---": "---",
+    "lint-test": "pnpm run --parallel lint-test",
+    "lint-fix": "pnpm run --parallel lint-fix"
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
@@ -20,9 +19,13 @@
     "@eslint/js": "^9.20.0",
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/ws": "^8.5.14",
+    "concurrently": "^9.1.2",
+    "esbuild": "^0.25.0",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
@@ -31,7 +34,6 @@
     "eslint-plugin-typescript-sort-keys": "^3.3.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.5.1",
-    "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
     "vite": "^6.1.0",
