--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,17 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "@overdesk/webapp/*": ["apps/webapp/src/*"]
+      // apps
+      "@overdesk/transmission/*": ["apps/transmission/src/*"],
+      "@overdesk/webapp/app": ["apps/webapp/src/app/index.ts"],
+      "@overdesk/webapp/pages": ["apps/webapp/src/pages/index.ts"],
+      "@overdesk/webapp/widgets": ["apps/webapp/src/widgets/index.ts"],
+      "@overdesk/webapp/features": ["apps/webapp/src/features/index.ts"],
+      "@overdesk/webapp/entities": ["apps/webapp/src/entities/index.ts"],
+      "@overdesk/webapp/shared": ["apps/webapp/src/shared/index.ts"],
+      // packages
+      "@overdesk/chat": ["packages/chat/src/index.ts"],
+      "@overdesk/utils": ["packages/utils/src/index.ts"]
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
